--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "postinstall": "yarn dev"
+    "postinstall": "node src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
